fix to publications table col width

--- a/Grants_and_Awards.html
+++ b/Grants_and_Awards.html
@@ -60,7 +60,7 @@
                             <td>Project</td>
                             <td>Year</td>
                             <td>Institution</td>
-                            <td>Amount ($)</td>
+                            <td style="min-width: 100px">Amount ($)</td>
                             <td>Role</td>
                         </tr>
                         <tr>
