Major edits by ankur
Edited personal details and research page

--- a/Ankur_Teredesai.html
+++ b/Ankur_Teredesai.html
@@ -16,12 +16,15 @@
                 <div class="sidebar-content">
                     <div id="about-me-sidebar-text">
                         <strong>Ankur M. Teredesai, Ph.D.</strong><br />
-                        Associate Professor,<br />
-                        Institute of Technology<br /><br />
+                        Professor<br />
+                        Graduate Program Coordinator<br />
+                        Computer Science & Systems<br />
+                        Institute of Technology<br />
+                        <a href="http://www.tacoma.uw.edu/">University of Washington Tacoma</a><br /><br />
 
-                        I manage the:<br />
-                        <a href="http://cwds.uw.edu/">Center for Data Science</a><br />
-                        at the <a href="http://www.tacoma.uw.edu/">University of Washington</a><br /><br />
+                        Director:<br />
+                         <a href="http://cwds.uw.edu/">Center for Data Science</a><br />
+                         <a href="http://www.uw.edu/">University of Washington</a><br /><br />
                         
                         Information Officer:<br />
                         <a href="http://www.kdd.org/">ACM SIGKDD</a><br /><br />
@@ -30,12 +33,12 @@
 
                         <br /><strong>Contact Information:</strong><br />
 
-                        Email: <a href="mailto:ankurt@uw.edu">ankurt@uw.edu</a><br />
+                        Email: ankurt AT uw dot edu<br />
                         Office: <a href="http://www.tacoma.uw.edu/campus-map/tioga-library-building">TLB 307C</a><br />
                         Phone: 253-692-4806<br /><br />
 
                         <strong>Mailing Address:</strong><br />
-                        Box 358426 1900 Commerce St,<br />
+                        Box 358426, 1900 Commerce St,<br />
                         Tacoma, WA 98402<br />
 
                     </div>
@@ -54,10 +57,10 @@
 
                     <h1>Ankur Teredesai</h1>
                     
-                    <p>Prof. Teredesai actively mentors graduate and undergraduate students, is engaged in developing new approaches to enhance participation of non-traditional students to computing, and has been actively developing new courses and programs in computing; most recently the Information Technology and Systems degree program at University of Washington Tacoma.</p>
-
-
-                    <p>Prof. Teredesai is an Associate Professor and Graduate Program Coordinator at the Institute of Technology, University of Washington Tacoma. He obtained a doctorate from SUNY, University at Buffalo. Apart from his academic appointments at RIT and UWT, he has significant industrial experience and held various positions at C-DAC Pune, Microsoft, and IBM T.J. Watson Labs. Prof. Teredesai has helped design and develop several deployed data science solutions in various verticals including internet advertising, social networks and handwritten zip code recognizers. His other applied research contributions include risk prediction for healthcare data mining, social recommendations, distributed algorithms for data mining, novelty detection and volume estimation from video streams, to name a few. He directs the activities for the Center for Web and Data Science and serves as the Information Officer for ACM SIGKDD (Special Interest Group in Knowledge Discovery and Data Mining). </p>
+                    <p>Ankur M. Teredesai is a Professor of Computer Science & Systems, and Graduate Program Coordinator at the Institute of Technology, University of Washington Tacoma. He obtained a doctorate from SUNY, University at Buffalo in 2002. His research interests focus on data science principles for societal impact and social good. </p>
+                    <p> Apart from his academic appointments at RIT and within the University of Washington, Prof. Teredesai has significant industrial experience, having held various positions at C-DAC Pune, Microsoft, IBM T.J. Watson Labs, and a variety of technology startups. He has published over 70 papers on data mining and machine learning, has managed large teams of data scientists/engineers, and deployed numerous data science solutions in various verticals (internet advertising, social networks, handwritten zip code recognizers, healthcare analytics). His recent applied research contributions include risk prediction for heart failure and ACO cost prediction in healthcare analytics, trust-enhanced recommendations, distributed data mining algorithms for big data, novelty detection in video, and dietary volume estimation, to name a few. </p>
+                    <p> Teredesai heads the <a href="http://cwds.uw.edu/">UW Center for Data Science</a>, and serves as the Information Officer for ACM <a href="http://www.kdd.org/">SIGKDD</a> (Special Interest Group in Knowledge Discovery and Data Mining). He is currently an associate editor for ACM SIGKDD Explorations and has served on program committees of major international conferences in data mining, maching learning and related areas.</p>
+                    <p>Prof. Teredesai acts as a mentor to colleagues, and several graduate and undergraduate students. He is actively engaged in developing new approaches to enhance participation of women and non-traditional students to computing. He has been instrumental in growing the graduate program and developing innovative new courses and programs in computing; including the Information Technology degree program at University of Washington Tacoma.</p>
                 </div>
 
 
