--- a/Research.html
+++ b/Research.html
@@ -16,12 +16,15 @@
                 <div class="sidebar-content">
                     <div id="about-me-sidebar-text">
                         <strong>Ankur M. Teredesai, Ph.D.</strong><br />
-                        Associate Professor,<br />
-                        Institute of Technology<br /><br />
+                        Professor<br />
+                        Graduate Program Coordinator<br />
+                        Computer Science & Systems<br />
+                        Institute of Technology<br />
+                        <a href="http://www.tacoma.uw.edu/">University of Washington Tacoma</a><br /><br />
 
-                        I manage the:<br />
-                        <a href="http://cwds.uw.edu/">Center for Data Science</a><br />
-                        at the <a href="http://www.tacoma.uw.edu/">University of Washington</a><br /><br />
+                        Director:<br />
+                         <a href="http://cwds.uw.edu/">Center for Data Science</a><br />
+                         <a href="http://www.uw.edu/">University of Washington</a><br /><br />
                         
                         Information Officer:<br />
                         <a href="http://www.kdd.org/">ACM SIGKDD</a><br /><br />
@@ -30,12 +33,12 @@
 
                         <br /><strong>Contact Information:</strong><br />
 
-                        Email: <a href="mailto:ankurt@uw.edu">ankurt@uw.edu</a><br />
+                        Email: ankurt AT uw dot edu<br />
                         Office: <a href="http://www.tacoma.uw.edu/campus-map/tioga-library-building">TLB 307C</a><br />
                         Phone: 253-692-4806<br /><br />
 
                         <strong>Mailing Address:</strong><br />
-                        Box 358426 1900 Commerce St,<br />
+                        Box 358426, 1900 Commerce St,<br />
                         Tacoma, WA 98402<br />
 
                     </div>
@@ -58,13 +61,13 @@
                     <p>I am interested in scalable efficient distributed machine learning algorithms. Currently I am working on machine learning algorithms particularly for soft computing and for discretization on hadoop/spark cloud based infrastructures.</p>
 
                     <h2>Bio and Healthcare Informatics:</h2>
-                    <p>Transformational Health Care is possible if clinical and fiscal decisions can be supported by a confluence of data, machine learning, and cloud computing. Our group at the Center for Data Science works on a variety of initiatives in this area. (put link for health here)</p>
+                    <p>Transformational Health Care is possible if clinical and fiscal decisions can be supported by a confluence of data, machine learning, and cloud computing. Our group at the Center for Data Science works on a variety of initiatives in <a href="http://cwds.uw.edu/health">healthcare analytics</a>.</p>
 
                     <h2>Computer Vision and Pattern Recognition:</h2>
-                    <p>My early training was in using CV and PR techniques for handwriting recognition and novelty detection in streams. I continue to be passionate about these areas and contribute to efforts in video stream analytics. Recent efforts include obstacle avoidance with drones and volumetric analysis of food.</p>
+                    <p>My early training was in using CV and PR techniques for handwriting recognition and novelty detection in streams. I continue to be active in these areas and contribute to efforts in video stream analytics. Recent efforts include distributed algorithms for scalable object tracking, obstacle avoidance for low-powered drones, a flying hadoop cluster, and dietary and volumetric visual analysis of food.</p>
 
                     <h2>Databases, Streams and Geospatial Research:</h2>
-                    <p>I am an active member of the SIGSPATIAL community (link), interested in topics at the intersection of machine learning and spatial databases. Recent efforts include organizing the first SIGSPATIAL cup on map-matching and working on various problems in spatial query processing and routing systems. </p>
+                    <p>I am an active member of the <a href="www.sigspatial.org">ACM SIGSPATIAL</a> community, interested in topics at the intersection of machine learning and spatial databases. Recent efforts include organizing the first ACM SIGSPATIAL Cup on Map-Matching and working on various problems in spatial query processing and routing systems. </p>
                 </div>
 
 
