--- a/Publications.html
+++ b/Publications.html
@@ -16,12 +16,15 @@
                 <div class="sidebar-content">
                     <div id="about-me-sidebar-text">
                         <strong>Ankur M. Teredesai, Ph.D.</strong><br />
-                        Associate Professor,<br />
-                        Institute of Technology<br /><br />
+                        Professor<br />
+                        Graduate Program Coordinator<br />
+                        Computer Science & Systems<br />
+                        Institute of Technology<br />
+                        <a href="http://www.tacoma.uw.edu/">University of Washington Tacoma</a><br /><br />
 
-                        I manage the:<br />
-                        <a href="http://cwds.uw.edu/">Center for Data Science</a><br />
-                        at the <a href="http://www.tacoma.uw.edu/">University of Washington</a><br /><br />
+                        Director:<br />
+                         <a href="http://cwds.uw.edu/">Center for Data Science</a><br />
+                         <a href="http://www.uw.edu/">University of Washington</a><br /><br />
                         
                         Information Officer:<br />
                         <a href="http://www.kdd.org/">ACM SIGKDD</a><br /><br />
@@ -30,12 +33,12 @@
 
                         <br /><strong>Contact Information:</strong><br />
 
-                        Email: <a href="mailto:ankurt@uw.edu">ankurt@uw.edu</a><br />
+                        Email: ankurt AT uw dot edu<br />
                         Office: <a href="http://www.tacoma.uw.edu/campus-map/tioga-library-building">TLB 307C</a><br />
                         Phone: 253-692-4806<br /><br />
 
                         <strong>Mailing Address:</strong><br />
-                        Box 358426 1900 Commerce St,<br />
+                        Box 358426, 1900 Commerce St,<br />
                         Tacoma, WA 98402<br />
 
                     </div>
