updates to pubs and general cleanup

--- a/Grants_and_Awards.html
+++ b/Grants_and_Awards.html
@@ -55,7 +55,7 @@
                         <div class="menu-item"><a href="Grants_and_Awards.html">Grants and Awards</a></div>
                     </div>
 
-                    <h1>Grants and Awards</h1>
+                    <h1>Grants and Awards (..2013)</h1>
                     
                     <table>
                         <tr id="table-header"> 
