--- a/Publications.html
+++ b/Publications.html
@@ -59,7 +59,7 @@
                     
                     <h2>Journal</h2>
                     <ol>
-                        <li><span class="publication_title">‘The Good Old Days’: An Examination of Nostalgia in User Generated Content</span>, Sergio Davalos, Altaf Merchant, Brenton Lessley, Greg Rose, and Ankur Teredesai, Journal of Human-Computer Studies. (under review)</li>
+                    
                         <li><span class="publication_title">Exploration and Integration of Big Data in Clinical Risk Prediction</span>, Kiyana Zolfaghar, Naren Meadem, Ankur Teredesai, Senjuti Basu Roy, Si-Chi Chin, Journal of the American Medical Informatics Association (JAMIA) Special Issue on Big Data in Healthcare and Biomedical Research 2013. (under review)</li>
                         <li><span class="publication_title">Dimensionality Reduction Phenomenon-aware Stream Query Processing</span>, Ashish Bindra, Mohamed Ali, Ankur Teredesai, International Journal of Data Engineering (IJDE), Volume 3, Issue 3 / 2012.</li>
                         <li><span class="publication_title">Trust- and Distrust-Based Recommendations for Controversial Reviews </span>, P. Victor, C. Cornelis, M. De Cock, A. Teredesai, IEEE Intelligent Systems 26(1), pp. 48-55, 2011.  (ISI 2010 impact factor: 2.57)</li>
@@ -71,7 +71,7 @@
 
                     <h2>Book Chapters</h2>
                     <ol>
-                        <li><span class="publication_title">Evaluation of Classifiers</span>, Ankur Teredesai and Nele Verbiest, Data Classification: Algorithms and Applications, CRC press. Charu Aggarwal (to appear September 2013)</li>
+                        <li><span class="publication_title">Evaluation of Classifiers</span>, Ankur Teredesai and Nele Verbiest, Data Classification: Algorithms and Applications, CRC press. 633-656, Charu Aggarwal</li>
                         <li><span class="publication_title">Forward by A. Teredesai, Trust Networks for Recommender Systems</span>. P. Victor, C. Cornelis, M. De Cock, Atlantis Press, 2011.</li>
                         <li><span class="publication_title">Cognitively Motivated Novelty Detection in Video Data Streams</span>, J. Kang, M. Ahmad, A. Teredesai, and R. Gaborski. Multimedia Data Mining and Knowledge Discovery, Springer Publishers. Valery A. Petrushin and Latifur Khan (Eds.), pg. 209-233, December 2006.</li>
                     </ol>
@@ -96,22 +96,28 @@
 
                     <ol>
                     <h3>2014</h3>
-
+                        <li><span class="publication_title">Selecting Robust Strategies in RTS Games via Concurrent Plan Augmentation</span>. Abdelrahman Elogeel, Andrey Kolobov, Ankur Teredesai, Mathew Alden, 14th International Conference on Autonomous Agents & Multiagent Systems 2015.
+                        <li><span class="publication_title"> HealthSCOPE: An Interactive Distributed Data Mining Framework for Scalable Prediction of Healthcare Costs </span>, Marquardt James, Newman Stacey, Hattarki Deepa, Srinivasan Rajagopalan, Sushmita Shanu, Ram Prabhu, Prasad Viren, Hazel David, Ramesh Archana, De Cock Martine, Teredesai Ankur, IEEE Data Mining Conference Demo Track, 2014 IEEE International Conference on DOI: 10.1109/ICDMW.2014.45 Publication Year: 2014 , Page(s): 1227 - 1230</li>
+                        <li><span class="publication_title">A Framework to Recommend Interventions for 30-Day Heart Failure Readmission Risk</span>, Rui Liu, Kiyana Zolfaghar, SC Chin, Senjuti Basu Roy, Ankur Teredesai, Data Mining (ICDM), 2014 IEEE International Conference on DOI: 10.1109/ICDM.2014.89 Publication Year: 2014 , Page(s): 911 - 916</li>
+                        <li><span class="publication_title"> Road network compression techniques in spatiotemporal embedded systems: a survey</span>, Amruta Khot, Abdeltawab Hendawi, Anderson Nascimento, Raj Katti, Ankur Teredesai, and Mohamed Ali.  In Proceedings of the 5th ACM SIGSPATIAL International Workshop on GeoStreaming (IWGS '14), Chengyang Zhang, Anas Basalamah, and Abdeltawab Hendawi (Eds.). ACM, New York, NY, USA, 33-36. DOI=10.1145/2676552.2676645 http://doi.acm.org/10.1145/2676552.2676645 </li>
+                        <li><span class="publication_title">Computing fuzzy rough approximations in large scale information systems.</span>Hasan Asfoor, Rajagopalan Srinivasan, Gayathri Vasudevan, Nele Verbiest, Chris Cornelis, Matthew E. Tolentino, Ankur Teredesai, Martine De Cock:  BigData Conference 2014: 9-16</li>
+                        <li><span class="publication_title">Divide-n-Discover - Discretization based Data Exploration Framework for Healthcare Analytics</span>. Si-Chi Chin, Kiyana Zolfaghar, Senjuti Basu Roy, Ankur Teredesai, Paul Amoroso:  HEALTHINF 2014: 329-333</li>
+                        <li><span class="publication_title">Age and Gender Identification in Social Media. </span> James Marquardt, Golnoosh Farnadi, Gayathri Vasudevan, Marie-Francine Moens, Sergio Davalos, Ankur Teredesai, Martine De Cock, CLEF (Working Notes) 2014: 1129-1136</li>
                         <li><span class="publication_title">Readmission Score as a Service(RaaS)</span>, Vivek Rao, Kiyana Zolfaghar, Vani Mandava, Senjuti Basu Roy, Ankur Teredesai, Data Science for Social Good, in conjunction with KDD 2014.</li>
                         <li><span class="publication_title">Divide-n-Discover : Discretization based Data Exploration Framework for Healthcare Analytics</span>, Si-chi Chin, Kiyana Zolfaghar, Senjuti Basu Roy, Ankur Teredesai, Paul Amoroso, HealthInf 2014.</li>
                         <li><span class="publication_title">Minimizing Makespan and Total Completion Time in MapReduce-like Systems</span>, Yuqing Zhu, Yiwei Jiang, Weili Wu, Ling Ding, Ankur Teredesai, Deying Li, and Wonjun Lee, IEEE INFOCOM 2014 (accepted full paper – 19.4%).</li>
+                        <li><span class="publication_title">Visualization in Educational Datasets Using a Rule-Based Inference System</span>. Aniruddha Desai, Muaz Mian, David Hazel, Ankur Teredesai, Gregory Benner: Data  BigData Congress 2014: 462-469</li>
+                        <li><span class="publication_title">Work in Progress - In-Memory Analysis for Healthcare Big Data</span>. Muaz Mian, Ankur Teredesai, David Hazel, Sreenivasulu Pokuri, Krishna Uppala  BigData Congress 2014: 778-779</li>
 
                     <h3>2013</h3>
 
                         <li><span class="publication_title">Big Data Solutions for Predicting Risk-of-Readmission for Congestive Heart Failure Patients</span>, Kiyana Zolfaghar, Naren Meadem, Ankur Teredesai, Senjuti Basu Roy, Si-Chi Chin, Brian Muckian, BigData'13, Big Data in Bioinformatics and Health Informatics.</li>
                         <li><span class="publication_title">ChronoZoom: Travel Through Time for Education, Information, and Information Technology Research</span>, Bob Walter, Ankur Teredesai, Ling Ding, Joel Larson, Yitao Li, Charu Chandiram, et al., SIGITE/RIIT 2013, October 2013, Orlando, Fl.</li>
-                        <li><span class="publication_title">An Effective Message Forwarding Algorithm for Ad-hoc Network with Cyclic Probabilistic Influences</span>. Yitao Li , Ling Ding, Jie Sheng, and Ankur Teredesai, IEEE GLOBECOM (2013).(under review)</li>
                         <li><span class="publication_title">Predicting Risk-of-Readmission of the Congestive Heart Failure Patients</span>, Jayshree Agarwal, Kiyana Zolfaghar, Si-Chi Chin, Senjuti Basu-Roy, Ankur Teredesai, ACM SIGKDD Workshop on Data Mining in Healthcare DMH 2013, August 2013.</li>
                         <li><span class="publication_title">Audience Segment Expansion Using Distributed In-Database K-Means Clustering</span>, Archana Ramesh, Ankur Teredesai, Ashish Bindra, Sreenivasulu Pokuri, Krishna Uppala, ACM SIGKDD Workshop on Advertising KDD,ADKDD 2013, August 2013.</li>
                         <li><span class="publication_title">Risk-O-Meter: An Intelligent Clinical Risk Calculator</span>, Kiyana Zolfaghar, Jayshree Agarwal, Deepthi Sistla, Si-Chi Chin, Senjuti Basu Roy, Nele Verbiest, Ankur Teredesai, David Hazel, Paul Amoroso, Lester Reed, ACM SIGKDD 2013 – Selected for Demonstration, August 2013.</li>
                         <li><span class="publication_title">Exploring Preprocessing Techniques for Prediction of Risk of Readmission for Congestive Heart Failure Patients</span>, Naren Meadem, Nele Verbiest, Kiyana Zolfaghar, Jayshree Agarwal, Si-chi Chin, Senjuti Basu Roy, Ankur Teredesai, Data Mining in Healthcare, in conjunction with KDD 2013</li>
                         <li><span class="publication_title">Predicting Risk-of-Readmission for Congestive Heart Failure Patients: A Multi-Layer Approach</span>, Kiyana Zolfaghar, Nele Verbiest, Jayshree Agarwal, Naren Meadem, Si-Chi Chin, Senjuti Basu Roy, Ankur Teredesai, David Hazel, Paul Amoroso, Lester Reed, American Medical Informatics Association (AMIA) Conference 2013, November 2013.</li>
-                        <li><span class="publication_title">Divide-n-Discover - Discretization based Data Exploration Framework for Healthcare Analytics</span>, Si-chi Chin, Kiyana Zolfaghar, Senjuti Basu Roy, and Ankur Teredesai, 22nd ACM International Conference on Information and Knowledge Management (CIKM 2013), Burlingame, CA, October 2013. (under review)</li>
                         <li><span class="publication_title">Finding Approachable Experts in Social Network</span>, Swapna Savvana, Senjuti Basu Roy, Vani Mandava, and Ankur Teredesai, IEEE International Conference on Big Data 2013.</li>
 
                     <h3>2012</h3>
